--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "qiankun-demo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "基于qiankun的微前端demo",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "pretty": "pretty-quick --staged",
+    "buildMain": "cd main-app && npm run build && cp-cli ../main-app/dist ../static/main-dist",
+    "buildVue": "cd micro-vue && npm run build && cp-cli ../micro-vue/dist ../static/vue-dist",
+    "buildReact": "cd micro-react && npm run build && cp-cli ../micro-react/build ../static/react-dist",
+    "buildAll": "npm run buildMain && npm run buildVue && npm run buildReact",
+    "serveAll": "node server/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "cp-cli": "^2.0.0",
+    "express": "^4.17.2",
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.2",
+    "tslib": "^2.3.1"
+  }
 }
