--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "pretty": "pretty-quick --staged",
-    "buildMain": "cd main-app && npm run build && cp-cli ../main-app/dist ../static/main-dist",
-    "buildVue": "cd micro-vue && npm run build && cp-cli ../micro-vue/dist ../static/vue-dist",
-    "buildReact": "cd micro-react && npm run build && cp-cli ../micro-react/build ../static/react-dist",
-    "buildAll": "npm run buildMain && npm run buildVue && npm run buildReact",
+    "inspect:dev": "vue-cli-service inspect --mode development >> webpack.config.development.js",
+    "inspect:prod": "vue-cli-service inspect --mode production >> webpack.config.production.js",
+    "build:main": "cd main-app && npm run build && cp-cli ./dist ../static/main-dist",
+    "build:vue": "cd micro-vue && npm run build && cp-cli ./dist ../static/vue-dist",
+    "build:react": "cd micro-react && npm run build && cp-cli ./build ../static/react-dist",
+    "build": "npm-run-all --parallel build:*",
     "serveAll": "node server/index.js"
   },
   "keywords": [],
@@ -20,6 +22,7 @@
     "cp-cli": "^2.0.0",
     "express": "^4.17.2",
     "husky": "^7.0.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
     "tslib": "^2.3.1"
